--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
 header {
   text-align: center;
   color: rgb(255, 255, 255);
-  padding: 50px;
+  padding: 30px;
   background: rgb(160, 56, 82);
   border-bottom: 30px rgb(109, 143, 150);
 }
@@ -34,26 +34,16 @@ section {
   background-color: white;
 }
 
-
-button {
-  background: radial-gradient(circle, yellow 0%, brown 100%);
-  border-radius: 10px;
-  color: grey;
-  font-size: 2em;
-  padding: 20px 50px;
-  text-align: center;
-}
-
 .big-font {
-  font-size: 4em;
+  font-size: 2.5em;
   text-align: center;
 
 }
 
 .reset-score-btn {
   font-size: 15px;
-  height: 25px;
-  line-height: 6px;
+  height: 65px;
+  line-height: 15px;
   margin-top: 20px;
 
 }
@@ -61,16 +51,16 @@ button {
 .wins-losses-container {
   display: flex;
   justify-content: space-between;
-  margin-top: 25px;
+  margin-top: 20px;
 } 
 
 .card {
   background: radial-gradient(circle, yellow 0%, brown 100%);
-  border: 1px solid rgb(109, 143, 150);
+  border: 4px solid rgb(128, 15, 71);
   border-radius: 10px;
-  box-shadow: black;
-  margin: 0 auto;
-  padding: 40px;
+  box-shadow: rgb(26, 23, 23);
+  margin: auto;
+  padding: 15px;
 }
 
 button {
@@ -85,29 +75,35 @@ button {
   transition-property:background-color;
   transition-duration: .20s;
   transition-timing-function: linear;
+  cursor: pointer;
+  letter-spacing: 0.25px;
+  padding: 20px 50px;
 }
 
 .word-guesser {
   width: 50vw;
-  height: auto;
-  color: rgb(170, 28, 52);
+  height: 450px;
+}
+
+.word-blanks {
+  line-height: 360px;
 }
 
 .results {
   width: 25vw;
-  height: 300px;
+  height: 450px;
 }
 
 .timer {
-  height: 200px;
-  padding: 15px;
+  height: 250px;
+  padding: 30px;
   background: rgb(190, 123, 21);
   color: black;
   text-align: center;
 }
 
 .timer-text {
-  padding: auto;
+  padding: 50px;
 }
 
 /* Add media screen, max width for word guess, section, main */
@@ -117,13 +113,14 @@ button {
   }
 
 
-  .word-guess, .result {
+  .word-guess, 
+  .result {
     width: 100vw;
   }
 
   section {
     background-color: white;
-    margin: 20 auto;
+    margin: 25px auto;
     width: 100vw;
   }
 }
